# wow

./: .gitignore  Cargo.toml  README.md  justfile  make_bin_actions.py  wamrc_precompile.fish  wasmer_precompile.fish
bench/: Cargo.toml
bench/src/: cold_start.rs  concurrency.rs  lib.rs
openwhisk-wasm-runtime/: Cargo.toml
openwhisk-wasm-runtime/src/: core.rs  lib.rs  types.rs  util.rs  wasm_tests.rs  wasmer.rs  wasmtime.rs
ow-assemblyscript-action/: asconfig.json  package-lock.json  package.json
ow-assemblyscript-action/assembly/: add.ts  index.ts  prime-as-handler.ts  prime-ts-handler.js  prime-ts-handler.ts  prime.ts
ow-common/: Cargo.toml
ow-common/src/: lib.rs  types.rs  util.rs
ow-evaluation/: Cargo.toml
ow-evaluation/src/: cold_start.rs  lib.rs
ow-executor/: Cargo.toml  Dockerfile
ow-executor/src/: core.rs  lib.rs  runtime_tests.rs  wasm_tests.rs
ow-wamr/: Cargo.toml
ow-wamr/src/: lib.rs
ow-wasm-action/: Cargo.toml
ow-wasm-action/examples/: add.rs  block.rs  clock.rs  filesys.rs  hash.rs  net.rs  prime.rs  random.rs
ow-wasm-action/src/: lib.rs
ow-wasm-precompiler/: Cargo.toml
ow-wasmer/: Cargo.toml
ow-wasmer/src/: lib.rs  wasmer.rs
ow-wasmtime/: Cargo.toml
ow-wasmtime-precompiler/: Cargo.toml
ow-wasmtime-precompiler/src/: lib.rs
ow-wasmtime/src/: lib.rs  wasmtime.rs
src/: core.rs  lib.rs  types.rs  wasmtime.rs
wasm-json/: Cargo.toml
wasm-json/examples/: add.rs  clock.rs  filesys.rs  net.rs  prime.rs  println-wasi.rs  random.rs
wasm-json/src/: lib.rs
wasm_precompiler/: Cargo.toml
wasm_precompiler/src/: lib.rs  main.rs
