[package]
name = "bench"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

[dependencies]
ow-common = { path = "../ow-common" }
async-std = { version = "1.6.3", features = ["unstable", "attributes"] }
surf = "2.1.0"
futures = "0.3"
num_cpus = "1.0"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
tide = "0.15.0"
rand = "0.8"
base64 = "0.13.0"