[package]
name = "ow-wasm-action"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
anyhow = "1.0"
rand = "0.8.3"
rand_xoshiro = "0.6.0"
primal = "0.2"
wee_alloc = "0.4.5"

[features]
default = ["bin"]
wasm = []
bin = []
