[package]
name = "ow-wasm-action"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
anyhow = "1.0"
rand = { version = "0.8.3", optional = true }
rand_xoshiro = { version = "0.6.0", optional = true }
primal = { version = "0.2", optional = true }
blake3 = { version = "0.3.7", optional = true }

[features]
default = ["wasm"]
wasm = []
# Left for easier compilation in justfile
bin = []
prime = ["primal"]
random = ["rand", "rand_xoshiro"]
hash = ["blake3"]
