[package]
name = "ow-wasmer"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

[dependencies]
wasmer = { version = "1.0", features = ["native"] }
wasmer-wasi = { version = "1.0"}
anyhow = "1.0"
dashmap = "4.0.2"
serde_json = "1.0.57"

ow-common = { path = "../ow-common"}
