[package]
name = "ow-wasmtime"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
cap-std = "=0.13.6"
wasmtime = "0.23.0"
wasmtime-wasi = "0.23.0"
wasi-cap-std-sync = "0.23.0"
wasmer = { version = "1.0", features = ["native"] }
wasmer-wasi = "1.0"
tempfile = "3.1.0"
base64 = "0.13.0"
dashmap = "4.0.2"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }

ow-common = { path = "../ow-common" }
